// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly 1`] = `
<label
  className="cssClass[label] cssClass[nonempty]"
  onMouseDown={[Function]}
>
  <input
    className="cssClass[checkbox]"
    onFocus={[Function]}
    type="checkbox"
  />
  <span
    className="cssClass[checkboxIcon]"
  />
  <svg
    className="cssClass[checkmarkIcon]"
  />
  <span
    className="cssClass[content]"
  >
    Checkbox
  </span>
</label>
`;

exports[`Checkbox renders disabled state correctly 1`] = `
<label
  className="cssClass[label] cssClass[nonempty]"
  onMouseDown={[Function]}
>
  <input
    className="cssClass[checkbox]"
    disabled={true}
    onFocus={[Function]}
    type="checkbox"
  />
  <span
    className="cssClass[checkboxIcon]"
  />
  <svg
    className="cssClass[checkmarkIcon]"
  />
  <span
    className="cssClass[content]"
  >
    Checkbox
  </span>
</label>
`;
